--- a/Task1/package.json
+++ b/Task1/package.json
@@ -17,6 +17,7 @@
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "material-ui-search-bar": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.12",
@@ -30,6 +31,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "tailwindcss": "^3.4.7",
     "vite": "^5.3.4"
   }
 }
